tests/fixtures/errors/invalid_args.s
.name "Invalid args"
.comment "invalid args"

live %3a2
